// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a center aligned cell 1`] = `
<td
  className="cell center"
>
  Ship
</td>
`;

exports[`renders a left aligned cell 1`] = `
<td
  className="cell left"
>
  Ship
</td>
`;

exports[`renders a right aligned cell 1`] = `
<td
  className="cell right"
>
  Ship
</td>
`;

exports[`renders a simple cell 1`] = `
<td
  className="cell left"
>
  Ship
</td>
`;
